All of the files I worked on yesterday.

--- a/public/contact-php.html
+++ b/public/contact-php.html
@@ -18,7 +18,7 @@
 	<link href="/css/custom-contact.css" rel="stylesheet">
    </head>
    <body class="blacken">
-   		<div class="site-wrapper">
+   	
 
 	      <div class="site-wrapper-inner">
 
@@ -43,7 +43,7 @@
 
 				<div class="container">
 
-				  <form class="col-md-offset-3 form-signin">
+				  <form class="col-md-offset-3 form-signin inner cover">
 					<h2 class="form-signin-heading">Contact me</h2>
 					<label for="inputEmail" class="sr-only"></label>
 					<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
