These are some javascript exercises that I've worked on today. The last was the beginning of creating functions.

--- a/public/hello-world-js.html
+++ b/public/hello-world-js.html
@@ -39,6 +39,7 @@
 		console.log("3 appeared " + three + " times.");
 		console.log("4 appeared " + four + " times.");
 		console.log("5 appeared " + five + " times.");
+		console.log(zero + one + two + three + four + five);
 
 
 
