This commit consists of adding another blog entry to my json data source and representing it on my html site through an ajax request.

--- a/public/ajax-blog.html
+++ b/public/ajax-blog.html
@@ -23,7 +23,7 @@
 				if (categories.length > 1) {
 	                categories = categories.join(", ")
 	            }
-	            $("#post").append("<p>" + entry.title + "</p><p>" + categories + "</p><p>" + entry.date + "</p><p>" + entry.content + "</p><br>")
+	            $("#post").append("<p class='lead'>" + entry.title + "</p><p><small>" + categories + "</small></p><p>" + entry.date + "</p><p>" + entry.content + "</p><br>")
 			});
 		});
 	</script>
