--- a/public/weather-map.html
+++ b/public/weather-map.html
@@ -3,24 +3,83 @@
 <head>
 	<title>Weather Map</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" href="/css/weather-map.css">
 </head>
 <body>
+	<div class="container">
+		<div id="weather-table" class="row">
+			<h1></h1><h2>Three Day Forecast</h2>
 
-	<div id="weather-table"></div>
+			<div id="day-0" class="col-md-4"></div>
+			<div id="day-1" class="col-md-4"></div>
+			<div id="day-2" class="col-md-4"></div>
+			
+		</div>
+		<div id="map" class="col-md-12"></div>
+		<p>*Drag Marker to Update Location</p>
+		<button type="button" id="map-reload" class="btn btn-info">Update Weather</button>
+	</div>
 
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUX-7tB181Zr0ar7rv1gI4_jAt5xXFIok"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="/js/moment.min.js/moment.min.js"></script>
+
 	<script>
+		(function() {
+			"use strict";
+			 var mapOptions = {
+	            zoom: 11,
+	            center: {
+	                lat:  29.418554,
+	                lng: -98.491182
+	            },
+	         };
 
-		$.get("http://api.openweathermap.org/data/2.5/forecast/daily", {
-		    APPID: "26aa56cc62dc653aa234453d8e6d23b0",
-		    q: "San Antonio, TX",
-		    units: "imperial",
-		    cnt: 3
-		}).done(function(weather) {
-			console.log(weather);
-		});
+			var map = new google.maps.Map($("#map").get(0), mapOptions);
+
+			var weatherMarker = new google.maps.Marker({
+				position: mapOptions.center,
+				map: map,
+				animation: google.maps.Animation.DROP,
+				draggable: true
+			});
+
+			var latitude;
+			var longitude;
+
+			
+
+			google.maps.event.addListener(weatherMarker, "dragend", function(event) {
+				latitude = event.latLng.lat();
+				longitude = event.latLng.lng();
+			});
 
 
+			
+			$("#map-reload").click(function() {
+				$.get("http://api.openweathermap.org/data/2.5/forecast/daily", {
+			    APPID: "26aa56cc62dc653aa234453d8e6d23b0",
+			    lat: latitude,
+			    lon: longitude,
+			    units: "imperial",
+			    cnt: 3
+				}).done(function(weather) {
+					console.log(weather);
+					console.log(weather.city.name);
+					console.log(weather.list);
+					weather.list.forEach(function(day, index) {console.log(day, index);
+						var date = moment(day.dt*1000).format("MMM Do");
+						console.log(date);
+						var weatherIcon = "<img src='http://openweathermap.org/img/w/" + day.weather[0].icon + ".png'>"
+						$("#day-" + index).html("<h3>" + date + "</h3><p class='lead'><strong>" + Math.round(day.temp.day) + "&deg;</strong></p><p><small>" + Math.round(day.temp.max) + "&deg;/" + Math.round(day.temp.min) + "&deg;</small></p><p>" + weatherIcon + "</p><p class='text-capitalize'><strong>What to expect: </strong>" + day.weather[0].description + "</p><p><strong>Humidity: </strong>" + day.humidity + "%</p><p><strong>Pressure: </strong>" + day.pressure + "</p>");
+
+						$("h1").html(weather.city.name);
+						// $("weather-table").append($("#day-0") + $("#day-1") + $("#day-2"));
+					});
+				});
+			});
+
+		})();
 	</script>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
