I'm commiting A LOT of files here. All of these deal with PHP/HTML integration.

--- a/public/weather-map.html
+++ b/public/weather-map.html
@@ -16,7 +16,7 @@
 			
 		</div>
 		<div id="map" class="col-md-12"></div>
-		<p>*Drag Marker to Update Location</p>
+		<p id="drag-info">*Drag Marker to Update Location</p>
 		<button type="button" id="map-reload" class="btn btn-info">Update Weather</button>
 	</div>
 
