--- a/public/resume.html
+++ b/public/resume.html
@@ -17,41 +17,41 @@
 
 	    <div class="site-wrapper">
 
-	      <div class="site-wrapper-inner">
+	      	<div class="site-wrapper-inner">
 
-	        <div class="cover-container">
+	        	<div class="cover-container">
 
-	          <div class="masthead clearfix">
-	            <div class="inner">
-	              <h3 class="masthead-brand">Resume</h3>
-	              <nav>
-	                <ul class="nav masthead-nav">
-	                  <li class="active"><a href="#">Home</a></li>
-	                  <li><a href="#">Education</a></li>
-	                  <li><a href="#">Work History</a></li>
-	                  <li><a href="#">Contact</a></li>
-	                </ul>
-	              </nav>
-	            </div>
-	          </div>
+	          		<div class="masthead clearfix">
+	            		<div class="inner">
+	              			<h3 class="masthead-brand">Resume</h3>
+	              			<nav>
+				                <ul class="nav masthead-nav">
+				                  <li class="active"><a href="#">Home</a></li>
+				                  <li><a href="#">Education</a></li>
+				                  <li><a href="#">Work History</a></li>
+				                  <li><a href="/contact-php.html">Contact</a></li>
+				                </ul>
+	              			</nav>
+	            		</div>
+	          		</div>
 
-	          <div class="inner cover">
-	            <h1 class="cover-heading">John Hernandez.</h1>
-	            <p class="lead">Codeup Student. LAMP Stack Learner.<br>Future Programmer Extraordinaire.</p>
-	            <p class="lead">
-	              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-	            </p>
-	          </div>
+			        <div class="inner cover">
+			            <h1 class="cover-heading">John Hernandez.</h1>
+			            <p class="lead">Codeup Student. LAMP+J Stack Learner.<br>Future Programmer Extraordinaire.</p>
+			            <p class="lead">
+			              	<a href="#" class="btn btn-lg btn-default">Learn more</a>
+			            </p>
+			        </div>
 
-	          <div class="mastfoot">
-	            <div class="inner">
-	              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-	            </div>
-	          </div>
+	          		<div class="mastfoot">
+		            <!-- <div class="inner">
+		              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+		            </div> -->
+		          	</div>
 
-	        </div>
+	        	</div>
 
-	      </div>
+	      	</div>
 
 	    </div>
 
