Adding some extra functionality to my calculator.

--- a/public/calculator.html
+++ b/public/calculator.html
@@ -7,34 +7,36 @@
 	<link href="/css/calculator.css" rel="stylesheet">
 </head>
 <body>
+	<h1 class="text-center">Calculator <small>A Love Story</small></h1>
 	<div>
 		<div><input type="text" id="firstInput" class="top" readonly></div>
 		<div><input type="text" id="mathFunction" readonly></div>
 		<div><input type="text" id="secondInput" readonly></div>
 		<div><input type="text" id="answerInput" class="bottom" readonly></div>
-		<div>
-			<button type="button" value="1" class="calculator-button" id="one">1</button>
-			<button type="button" value="2" class="calculator-button" id="two">2</button>
-			<button type="button" value="3" class="calculator-button" id="three">3</button>
-			<button type="button" value="+" class="calculator-button math-function" id="plus">+</button>
-			<br>
-			<button type="button" value="4" class="calculator-button" id="four">4</button>
-			<button type="button" value="5" class="calculator-button" id="five">5</button>
-			<button type="button" value="6" class="calculator-button" id="six">6</button>
-			<button type="button" value="-" class="calculator-button math-function" id="minus">-</button>
-			<br>
-			<button type="button" value="7" class="calculator-button" id="seven">7</button>
-			<button type="button" value="8" class="calculator-button" id="eight">8</button>
-			<button type="button" value="9" class="calculator-button" id="nine">9</button>
-			<button type="button" value="*" class="calculator-button math-function" id="multiply">*</button>
-			<br>
-			<button type="button" class="calculator-button clear-button" id="clear">C</button>
-			<button type="button" value="0" class="calculator-button" id="zero">0</button>
-			<button type="button" value="." id="point">.</button>
-			<button type="button" value="/" class="calculator-button math-function" id="divide">/</button>
-			<br>
-			<button type="button" value="=" class="calculator-button math-function equals-button" id="equals">=</button>
-		</div>
+	</div>
+	<div>
+		<button type="button" value="1" class="calculator-button" id="one">1</button>
+		<button type="button" value="2" class="calculator-button" id="two">2</button>
+		<button type="button" value="3" class="calculator-button" id="three">3</button>
+		<button type="button" value="+" class="calculator-button math-function" id="plus">+</button>
+		<br>
+		<button type="button" value="4" class="calculator-button" id="four">4</button>
+		<button type="button" value="5" class="calculator-button" id="five">5</button>
+		<button type="button" value="6" class="calculator-button" id="six">6</button>
+		<button type="button" value="-" class="calculator-button math-function" id="minus">-</button>
+		<br>
+		<button type="button" value="7" class="calculator-button" id="seven">7</button>
+		<button type="button" value="8" class="calculator-button" id="eight">8</button>
+		<button type="button" value="9" class="calculator-button" id="nine">9</button>
+		<button type="button" value="*" class="calculator-button math-function" id="multiply">*</button>
+		<br>
+		<button type="button" value="" class="calculator-button negative-button" id="negative">±</button>
+		<button type="button" value="0" class="calculator-button" id="zero">0</button>
+		<button type="button" value="." id="point">.</button>
+		<button type="button" value="/" class="calculator-button math-function" id="divide">/</button>
+		<br>
+		<button type="button" class="calculator-button clear-button" id="clear">C</button>
+		<button type="button" value="=" class="calculator-button math-function equals-button" id="equals">=</button>
 	</div>
 
 	<script src="/js/calculator.js"></script>
