--- a/public/calculator.html
+++ b/public/calculator.html
@@ -7,7 +7,7 @@
 	<link href="/css/calculator.css" rel="stylesheet">
 </head>
 <body>
-	<h1 class="text-center">Calculator <small>A Love Story</small></h1>
+	<h1 class="text-center">A Calculator <small>Simple Math for Simple Problems</small></h1>
 	<div>
 		<div><input type="text" id="firstInput" class="top" readonly></div>
 		<div><input type="text" id="mathFunction" readonly></div>
@@ -36,6 +36,7 @@
 		<button type="button" value="/" class="calculator-button math-function" id="divide">/</button>
 		<br>
 		<button type="button" class="calculator-button clear-button" id="clear">C</button>
+		<button type="button" class="calculator-button delete-button" value="" id="delete">‹</button>
 		<button type="button" value="=" class="calculator-button math-function equals-button" id="equals">=</button>
 	</div>
 
