--- a/public/ajax-store.html
+++ b/public/ajax-store.html
@@ -6,21 +6,23 @@
 </head>
 <body>
 
-<h1>John's Online Tool Store</h1>
+<div class="container">
+    <h1 class="container-title">John's Online Tool Store</h1>
 
-<table id="products" class="table table-condense table-hover">
-    <thead>
-        <tr>
-            <th>Product</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>Categories</th>
-        </tr>
-    </thead>
-    <tbody id="insertProducts"></tbody>
-</table>
+    <table id="products" class="table table-condense table-hover">
+        <thead>
+            <tr>
+                <th>Product</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>Categories</th>
+            </tr>
+        </thead>
+        <tbody id="insertProducts"></tbody>
+    </table>
 
-<button id="reload-json" class="btn btn-primary" type="button">Refresh Inventory</button>
+    <button id="reload-json" class="btn btn-primary" type="button">Refresh Inventory</button>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
@@ -36,20 +38,10 @@
             console.log(tool.title);
             var categories = tool.categories
             if (categories.length > 1) {
-                categories = categories.join(", ")
+                categories = categories.join(", ");
             }
-            $("#insertProducts").append("<tr><td>" + tool.title + "</td><td>" + tool.quantity + "</td><td>$" + tool.price + "</td><td>" + categories + "</tr>");
-            // if (too)
-            // tool.push({"category":"title"});
-            // quantity.push(inventory.quantity);
-            // price.push(inventory.price);
-            // category.push(inventory.categories);
-        // row.append("<td")
+            $("#insertProducts").append("<tr><td>" + tool.title + "</td><td>" + tool.quantity + "</td><td>$" + tool.price + "</td><td>" + categories + "</td></tr>");
         });
-        // console.log(tools);
-        // console.log(quantity);
-        // console.log(price);
-        // console.log(category);
     });
 
     $("#reload-json").click(function() {
@@ -62,9 +54,9 @@
                 console.log(tool.title);
                 var categories = tool.categories
                 if (categories.length > 1) {
-                    categories = categories.join(", ")
+                    categories = categories.join(", ");
                 }
-                $("#insertProducts").append("<tr><td>" + tool.title + "</td><td>" + tool.quantity + "</td><td>$" + tool.price + "</td><td>" + categories + "</tr>");
+                $("#insertProducts").append("<tr><td>" + tool.title + "</td><td>" + tool.quantity + "</td><td>$" + tool.price + "</td><td>" + categories + "</td></tr>");
             });
 
         });
